--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 </head>
 <body>
 <ul class="list-group">
-	<li class="list-group-item"><a href="https://sophiabrook.github.io/layout/layout1.html">loading1</a></li>
-	<li class="list-group-item"><a href="https://sophiabrook.github.io/layout/layout2.html">loading2</a></li>
+	<li class="list-group-item"><a href="https://sophiabrook.github.io/layout/layout1.html">圣杯布局</a></li>
+	<li class="list-group-item"><a href="https://sophiabrook.github.io/layout/layout2.html">双飞翼布局</a></li>
 </ul>
    
 </body>
